Ajout la possibilité de faire des copies de messages
Modifications mineures supplémentaires :
* Dans la liste des enquêtes, ajout du type d'enquête (C=Copie, I = Interception)
* Factorisation des templates de formulaires

--- a/templates/header.html
+++ b/templates/header.html
@@ -14,6 +14,7 @@
 	<div>
 		{% bootstrap_button "Nouvelle enquete" button_type="link" button_class="btn-primary" href="/murder/enquete"%}
 		{% bootstrap_button "Liste" button_type="link" button_class="btn-primary" href="/murder/list" %}
+		{% bootstrap_button "Nouvelle copie" button_type="link" button_class="btn-primary" href="/murder/copie"%}
 		{% bootstrap_button "Nouvelle interception" button_type="link" button_class="btn-primary" href="/murder/interception"%}
 	</div>
 	{% block content %}
